added the image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="productive-section section">
               
             <div class="productive-img"> 
-                <img src="images/font-awesome resoucres/illustration-stay-productive.png" alt="Illustration of teamwork"> 
+                <img src="./images/illustration-stay-productive.png" alt="Illustration of teamwork"> 
             </div>
 
             <div class="productive-content">
