--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <body>
 
-        <div class="productive-section section">
+        <div class="productive-section">
               
             <div class="productive-img"> 
                 <img src="./images/illustration-stay-productive.png" alt="Illustration of teamwork"> 
